--- a/templates/full_recipe_page.html
+++ b/templates/full_recipe_page.html
@@ -137,11 +137,11 @@
                             <label for="titleDesc">Title (Z - A)</label>
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
-                            <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
+                            <input form="search-form" type="radio" name="search-sort" value="avg_rating" id="rating"/>
                             <label for="rating">Rating (Low To High)</label>
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
-                            <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
+                            <input form="search-form" type="radio" name="search-sort" value="avg_rating desc" id="ratingDesc"/>
                             <label for="ratingDesc">Rating (High To Low)</label>
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
@@ -155,6 +155,7 @@
                     </div>
                 </div>
             </div>
+            <button class="btn btn-primary w-25 mb-2 mt-0 mx-auto" id="apply-filter">Apply Filter</button>
         </div>
     </div>
 </div>
@@ -180,13 +181,17 @@
                                                             </tr>
                                                             </thead>
                                                             <tbody>
+                                                            <tr>
+                                                                <td class="w-25">Owner :</td>
+                                                                <td class="w-75"><li class="mb-3" title="{{.email_id}}" style="white-space: nowrap;overflow: hidden; text-overflow: ellipsis; list-style-type: none">{{.recipe.email_id}}</li></td>
+                                                            </tr>
                                                                 <tr>
                                                                     <td class="w-25">Description :</td>
                                                                     <td class="w-75">{{.recipe.description}}</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td class="w-25">Average Rating :</td>
-                                                                    <td class="w-75">{{.recipe.avg_rating}}</td>
+                                                                    <td class="w-75">{{.recipe.avg_rating}}/5</td>
                                                                 </tr>
                                                                 <tr>
                                                                     <td class="w-25">Cooking Time :</td>
@@ -293,16 +298,24 @@
 
 <script>
     $("#searchbtn").click(function () {
+        if ($("#search").val() !== "") {
+            $("#search-form").submit()
+        }
+    });
+    $("#apply-filter").click(function () {
         $("#search-form").submit()
     });
-    $("#search").keydown(function (e) {
-        if (e.keyCode == 13) {
-            $("#search-form").submit()
+    $("#search-form").bind('keypress keydown keyup', function (e) {
+        console.log(e.keyCode)
+        if (e.keyCode === 13 && $("#search").val() === "") {
+            e.preventDefault();
+            return false;
         }
     });
     if ($("#video").attr("src") == "") {
         $("#video-block").addClass("d-none")
     }
+
     $(document).ready(async function() {
         const response = await fetch('http://localhost:8080/api/category/Get_Categories', {
             method: "POST",
@@ -310,7 +323,7 @@
         const data = await response.json();
         var str = ""
         data.forEach(function (cate) {
-            str += `<fieldset class="d-inline-block col-3 mx-3">`
+            str += `<fieldset class="d-inline-block col-4">`
             str += `<input form="search-form" class="mx-1" type="checkbox" name="search-categories[]" value="` + cate + `" id="` + cate + `" />`
             str += `<label for="` + cate + `">` + cate + ` </label>`
             str += `</fieldset>`
