--- a/templates/search.html
+++ b/templates/search.html
@@ -39,7 +39,7 @@
                 <li class="ms-5 me-5"></li>
                 <li class="nav-item ms-5">
                     <form action="/search" id="search-form" method="post" class="d-flex">
-                        <input class="form-control" style="width: 20vw" type="search" name="search" id="search" placeholder="Search" aria-label="Search">
+                        <input class="form-control" style="width: 20vw" type="search" name="search" id="search"value="{{.searchstruct.SearchKeyword}}" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-dark ms-4" id="searchbtn" type="button">Search</button>
                         <button class="btn btn-outline-dark ms-4" data-bs-toggle="modal" data-bs-target="#modalSignin" type="button" id="adv">Advance Search</button>
                     </form>
@@ -136,11 +136,11 @@
                             <label for="titleDesc">Title (Z - A)</label>
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
-                            <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
+                            <input form="search-form" type="radio" name="search-sort" value="avg_rating" id="rating"/>
                             <label for="rating">Rating (Low To High)</label>
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
-                            <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
+                            <input form="search-form" type="radio" name="search-sort" value="avg_rating desc" id="ratingDesc"/>
                             <label for="ratingDesc">Rating (High To Low)</label>
                         </fieldset>
                         <fieldset class="d-inline-block col-5 mx-4">
@@ -154,6 +154,7 @@
                     </div>
                 </div>
             </div>
+            <button class="btn btn-primary w-25 mb-2 mt-0 mx-auto" id="apply-filter">Apply Filter</button>
         </div>
     </div>
 </div>
@@ -170,6 +171,7 @@
                                     <input type="hidden" name="id" value="{{.id}}">
                                     <input type="hidden" name="avgrating{{.id}}" value="{{.avg_rating}}">
                                     <a href="/fullrecipe/{{.id}}" class="text-reset"><h4>{{.title}}</h4></a>
+                                    <li class="mb-3" title="{{.email_id}}" style="white-space: nowrap;overflow: hidden; text-overflow: ellipsis; list-style-type: none">Owner : {{.email_id}}</li>
                                     <p>Time : {{.cooking_time}} Minutes</p>
                                     <p>Serves : {{.serving}} Person</p>
                                     <p>Type : {{.type}}</p>
@@ -188,6 +190,8 @@
                             </div>
                         </div>
                     </div>
+                {{else}}
+                    <h2 class="text-center text-danger">No, Data Found</h2>
                 {{end}}
             </div>
         </div>
@@ -205,13 +209,20 @@
         })
     })
     $("#searchbtn").click(function () {
-        $("#search-form").submit()
-    });
-    $("#search").keydown(function (e) {
-        if (e.keyCode == 13) {
+        if ($("#search").val() !== "") {
             $("#search-form").submit()
         }
     });
+    $("#apply-filter").click(function () {
+        $("#search-form").submit()
+    });
+    $("#search-form").bind('keypress keydown keyup', function (e) {
+        console.log(e.keyCode)
+        if (e.keyCode === 13 && $("#search").val() === "") {
+            e.preventDefault();
+            return false;
+        }
+    });;
     $(document).ready(async function() {
         const response = await fetch('http://localhost:8080/api/category/Get_Categories', {
             method: "POST",
@@ -219,7 +230,7 @@
         const data = await response.json();
         var str = ""
         data.forEach(function (cate) {
-            str += `<fieldset class="d-inline-block col-3 mx-3">`
+            str += `<fieldset class="d-inline-block col-4">`
             str += `<input form="search-form" class="mx-1" type="checkbox" name="search-categories[]" value="` + cate + `" id="` + cate + `" />`
             str += `<label for="` + cate + `">` + cate + ` </label>`
             str += `</fieldset>`
