--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -133,11 +133,11 @@
               <label for="titleDesc">Title (Z - A)</label>
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
-              <input form="search-form" type="radio" name="search-sort" value="rating" id="rating"/>
+              <input form="search-form" type="radio" name="search-sort" value="avg_rating" id="rating"/>
               <label for="rating">Rating (Low To High)</label>
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
-              <input form="search-form" type="radio" name="search-sort" value="rating desc" id="ratingDesc"/>
+              <input form="search-form" type="radio" name="search-sort" value="avg_rating desc" id="ratingDesc"/>
               <label for="ratingDesc">Rating (High To Low)</label>
             </fieldset>
             <fieldset class="d-inline-block col-5 mx-4">
@@ -151,6 +151,7 @@
           </div>
         </div>
       </div>
+      <button class="btn btn-primary w-25 mb-2 mt-0 mx-auto" id="apply-filter">Apply Filter</button>
     </div>
   </div>
 </div>
@@ -217,10 +218,10 @@
         </div>
       </div>
       <div class="form-group">
-        <input type="number" name="cookingtime" id="cookingtime " class="form-control" placeholder="Cooking Time (in minutes)" required="required">
+        <input type="number" name="cookingtime" id="cookingtime" class="form-control" placeholder="Cooking Time (in minutes)" required="required" MIN="1" MAX="300" pattern="[0-9]{3}">
       </div>
       <div class="form-group">
-        <input type="number" name="serving" id="serving" class="form-control" placeholder="Serves (i.e. : 3 person)" required="required">
+        <input type="number" name="serving" id="serving" class="form-control" placeholder="Serves (i.e. : 3 person)" required="required" MIN="1" MAX="20">
       </div>
       <div class="form-group form-control">
         <p class="d-inline">Difficulty Level :</p>
@@ -248,7 +249,7 @@
       <div class="form-group form-control">
         <p class="d-inline">Images of Food : </p>
         <div class="d-inline">
-        <input type="file" placeholder="images" name="files" required="required" accept="image/jpeg image/png">
+        <input type="file" placeholder="images" name="files" required="required" accept="image/*">
         </div>
       </div>
       <div class="form-group">
@@ -264,11 +265,30 @@
 </body>
 <script>
   $("#searchbtn").click(function () {
+    if ($("#search").val() !== "") {
+      $("#search-form").submit()
+    }
+  });
+  $("#search-form").bind('keypress keydown keyup', function (e) {
+    console.log(e.keyCode)
+    if (e.keyCode === 13 && $("#search").val() === "") {
+      e.preventDefault();
+      return false;
+    }
+  });
+  $("#apply-filter").click(function () {
     $("#search-form").submit()
   });
-  $("#search").keydown(function (e) {
-    if (e.keyCode == 13) {
-      $("#search-form").submit()
+  document.querySelector("#cookingtime").addEventListener("keypress", function (evt) {
+    if (evt.which != 8 && evt.which != 0 && evt.which < 48 || evt.which > 57)
+    {
+      evt.preventDefault();
+    }
+  });
+  document.querySelector("#serving").addEventListener("keypress", function (evt) {
+    if (evt.which != 8 && evt.which != 0 && evt.which < 48 || evt.which > 57)
+    {
+      evt.preventDefault();
     }
   });
   $(document).ready(async function() {
@@ -287,7 +307,7 @@
     $("#categories-holder").append(str)
       str = ""
       data.forEach(function (cate) {
-        str += `<fieldset class="d-inline-block col-3 mx-3">`
+        str += `<fieldset class="d-inline-block col-4">`
         str += `<input form="search-form" class="mx-1" type="checkbox" name="search-categories[]" value="` + cate + `" id="src` + cate + `" />`
         str += `<label for="src` + cate + `">` + cate + ` </label>`
         str += `</fieldset>`
